[gd_scene load_steps=6 format=2]

[ext_resource path="res://Malo.tscn" type="PackedScene" id=1]
[ext_resource path="res://jugador.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=3]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=4]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0 )
}

[node name="Main" type="Node2D"]
script = ExtResource( 3 )
Malos_scene = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 480.0
margin_bottom = 728.0
color = Color( 0.662745, 0.564706, 0.478431, 1 )

[node name="Njugador" parent="." instance=ExtResource( 2 )]
position = Vector2( 250, 250 )

[node name="MalosTimer" type="Timer" parent="."]
autostart = true

[node name="PuntoTimer" type="Timer" parent="."]
autostart = true

[node name="EspeTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="MaloPath2D" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="MaloPathFollow2D" type="PathFollow2D" parent="MaloPath2D"]

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 248, 424 )

[node name="HUD" parent="." instance=ExtResource( 4 )]

[connection signal="golpe" from="Njugador" to="." method="_on_Njugador_golpe"]
[connection signal="timeout" from="MalosTimer" to="." method="_on_MalosTimer_timeout"]
[connection signal="timeout" from="PuntoTimer" to="." method="_on_PuntoTimer_timeout"]
[connection signal="timeout" from="EspeTimer" to="." method="_on_EspeTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
